# shamir_secret_sharing

./: .gitignore  Cargo.toml  LICENSE.txt  README.txt
src/: galois_field_256.rs  main.rs  polynomials.rs  shamir.rs
