[package]
name = "shamir_file_secret_sharing"
version = "1.0.0"
authors = ["Benoît Mortgat"]
edition = "2021"
rust-version = "1.60"
description = "Implementation of Shamir secret sharing for use with files"
repository = "https://github.com/salsifis/shamir_secret_sharing"
license = "Apache-2.0"
keywords = ["shamir", "secret", "galois"]
categories = ["cryptography", "command-line-utilities", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
bincode = "1.3"
structopt = { version = "0.3", default-features = false }
